# ChangeLog for net-zope/zope-app-publication
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-zope/zope-app-publication/ChangeLog,v 1.7 2010/04/18 00:32:01 arfrever Exp $

*zope-app-publication-3.11.0 (18 Apr 2010)

  18 Apr 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -zope-app-publication-3.10.2.ebuild, +zope-app-publication-3.11.0.ebuild:
  Version bump.

  14 Feb 2010; Raúl Porcel <armin76@gentoo.org>
  zope-app-publication-3.10.2.ebuild:
  Add ~alpha/~sparc wrt #297734

  22 Jan 2010; Brent Baude <ranger@gentoo.org> ChangeLog:
  Marking zope-app-publication-3.10.2 ~ppc for bug 297734

*zope-app-publication-3.10.2 (17 Jan 2010)

  17 Jan 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -zope-app-publication-3.10.0.ebuild, +zope-app-publication-3.10.2.ebuild:
  Version bump.

  16 Jan 2010; Christian Faulhammer <fauli@gentoo.org>
  zope-app-publication-3.10.0.ebuild:
  keyworded ~arch for x86, bug 297734

*zope-app-publication-3.10.0 (20 Dec 2009)

  20 Dec 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -zope-app-publication-3.9.0.ebuild, +zope-app-publication-3.10.0.ebuild:
  Version bump.

*zope-app-publication-3.9.0 (28 Nov 2009)

  28 Nov 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +zope-app-publication-3.9.0.ebuild, +metadata.xml:
  Initial addition. Ebuild written by me.
