@@ -1,4 +1,4 @@
-DIST zope.app.publication-3.11.0.tar.gz 30882 RMD160 b66ef981a41e886283f364b73b78063048d41f21 SHA1 938e13dd120e919c000dde3e327d075c819e1d62 SHA256 218a2d43f13b9835505c1be1ec9fdbb4f065349e1b3fd359134e9e71ba0442b1
-EBUILD zope-app-publication-3.11.0.ebuild 1124 RMD160 9cae27553b6e401756c8d872924090ac9fd6b624 SHA1 dcde876a5ed8f5b6858e73368827015635c21630 SHA256 1be50a64d7e82f47d1e4109825f39d90516ffe4bc1cccae890f32b0c549c457b
-MISC ChangeLog 1443 RMD160 d0ad690b152a04cd549a176b709784cf8f2b8e99 SHA1 5896b1f24522190e8a93bcbb7607ab7ad79995c5 SHA256 dd831573a7dcf68959dabe690d36710741cfb848989b667065591ed0f115a036
+DIST zope.app.publication-3.11.1.tar.gz 30518 RMD160 e298eec47ba1b16ee0141b8b760819eaf93e56e0 SHA1 e776d5797de0da536f76878c6fd67876f758d3f8 SHA256 596be529ea315ced63789c60e4ce308e47bd8b280da5fbfd5ba624d7e8fbeec5
+EBUILD zope-app-publication-3.11.1.ebuild 1124 RMD160 570bb152d6f94c79335d10b3e5494b627c1185f4 SHA1 d3744f122ae760d7678f62fa1edf4c493386c015 SHA256 a2760f9746fe3226e7830fd508f495603ec80ac6574ce0ceabe0f2cc1cbffdf5
+MISC ChangeLog 1653 RMD160 d378cb6e767573b456d334d45a18d717187769c9 SHA1 3de587f59196dbc4f82d1b21cf5954df4690d2be SHA256 1ffdcf4c95eb0d562fbb3e3257548df576e73613af84a3a9dcdc63405e1f51e9
 MISC metadata.xml 183 RMD160 0e2d86898897ee70cc1f6e9ceb76d00388d3b2fa SHA1 19635a9dfa15036e341a7cbdd8cbd018db62be82 SHA256 f480763451083d2f7be8fc23d38e02952ccc383b4cc65e103a9901a0907ce50d
