@@ -1,0 +1,44 @@
+# Copyright 1999-2010 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/net-zope/zope-app-publication/zope-app-publication-3.11.1.ebuild,v 1.1 2010/04/28 20:37:27 arfrever Exp $
+
+EAPI="3"
+PYTHON_DEPEND="2"
+SUPPORT_PYTHON_ABIS="1"
+
+inherit distutils
+
+MY_PN="${PN//-/.}"
+MY_P="${MY_PN}-${PV}"
+
+DESCRIPTION="Zope publication"
+HOMEPAGE="http://pypi.python.org/pypi/zope.app.publication"
+SRC_URI="http://pypi.python.org/packages/source/${MY_PN:0:1}/${MY_PN}/${MY_P}.tar.gz"
+
+LICENSE="ZPL"
+SLOT="0"
+KEYWORDS="~alpha ~amd64 ~ppc ~sparc ~x86"
+IUSE=""
+
+RDEPEND="net-zope/zodb
+	net-zope/zope-authentication
+	net-zope/zope-browser
+	net-zope/zope-component
+	net-zope/zope-configuration
+	net-zope/zope-error
+	net-zope/zope-event
+	net-zope/zope-interface
+	net-zope/zope-location
+	>=net-zope/zope-publisher-3.12
+	net-zope/zope-security
+	net-zope/zope-schema
+	net-zope/zope-testing
+	>=net-zope/zope-traversing-3.9.0"
+DEPEND="${RDEPEND}
+	dev-python/setuptools"
+RESTRICT_PYTHON_ABIS="3.*"
+
+S="${WORKDIR}/${MY_P}"
+
+PYTHON_MODNAME="${PN//-//}"
+DOCS="CHANGES.txt README.txt"
