@@ -1,6 +1,12 @@
 # ChangeLog for net-zope/zope-app-publication
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-zope/zope-app-publication/ChangeLog,v 1.7 2010/04/18 00:32:01 arfrever Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-zope/zope-app-publication/ChangeLog,v 1.8 2010/04/28 20:37:27 arfrever Exp $
+
+*zope-app-publication-3.11.1 (28 Apr 2010)
+
+  28 Apr 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
+  -zope-app-publication-3.11.0.ebuild, +zope-app-publication-3.11.1.ebuild:
+  Version bump.
 
 *zope-app-publication-3.11.0 (18 Apr 2010)
 
